--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .content {
-    padding: 10px
+    padding: 10px;
 }
 
 .content h1 {
@@ -39,4 +39,77 @@ body {
 .content p {
     font-size: 35px;
     line-height: 75px;
+}
+
+.mj {
+    float: right;
+    margin-top: -450px;
+    margin-right: 100px;
+    height: 500px;
+}
+
+.stevens {
+    float: right;
+    margin-top: -700px;
+    margin-right: 200px;
+    height: 300px;
+}
+
+@media screen and (max-width: 1650px) {
+    .mj, .stevens {
+        margin-right: 0px;
+    }
+}
+
+@media screen and (max-width: 1525px) {
+    .mj, .stevens {
+        margin-top: 0px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .mj {
+        height: 300px;
+    }
+    .stevens {
+        height: 150px;
+    }
+}
+
+@media screen and (max-width: 1200px){
+    .content p {
+        font-size: 30px;
+        line-height: 50px;
+
+    }
+    .content h1 {
+        font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 1050px){
+    .content p {
+        font-size: 25px;
+        line-height: 40px;
+    }
+    .content h1 {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .content p {
+        font-size: 20px;
+        line-height: 30px;
+    }
+    .content h1 {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .index a {
+        padding: 15px;
+        font-size: 20px;
+    }
 }
