--- a/style.css
+++ b/style.css
@@ -25,8 +25,13 @@
 }
 #fileupload {
     z-index: 100;
-    margin-top: 15px;
     color: white;
+}
+#songData {
+    width: 50%;
+    display: flex;
+    margin: auto;
+    justify-content: center;
 }
 #buttons {
     width: 50%;
@@ -38,4 +43,11 @@ button {
     z-index: 100;
     height: 50px;
     width: 50px;
+}
+h1 {
+    position: absolute;
+    margin-top: -57.5px;
+    color: black;
+    font-size: 20px;
+    user-select: none;
 }
