Added change song button that refreshes the page, also moved title and drawLines() downward.

--- a/style.css
+++ b/style.css
@@ -45,9 +45,6 @@ button {
     width: 50px;
 }
 h1 {
-    position: absolute;
-    margin-top: -57.5px;
-    color: black;
+    color: white;
     font-size: 20px;
-    user-select: none;
 }
