--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     width: 100%;
     height: 100%;
 }
+#content {
+    display: flex;
+    margin: 10px 50px 0px 50px;
+}
 #canvas1 {
     position: absolute;
     top: 0;
@@ -19,32 +23,64 @@
     height: 100%
 }
 #audio1 {
-    width: 50%;
+    z-index: 1;
+    width: 35%;
     margin: auto;
     display: block;
+    filter: drop-shadow(0px 0px 10px white);
 }
 #fileupload {
-    z-index: 100;
+    display: none;
+}
+#fileLabel {
+    z-index: 1;
     color: white;
+    font-size: 30px;
+    text-shadow: 3px 2px 4px;
+    font-weight: bold;
+    text-decoration: underline;
 }
 #songData {
-    width: 50%;
+    width: 25%;
     display: flex;
     margin: auto;
     justify-content: center;
 }
 #buttons {
-    width: 50%;
+    width: 20%;
     display: flex;
     margin: auto;
     justify-content: center;
 }
+input {
+    z-index: 1;
+}
 button {
-    z-index: 100;
+    background-color: black;
+    color: white;
+    z-index: 1;
     height: 50px;
     width: 50px;
+    border-color: white;
+}
+#redSlider {
+    accent-color: red;
+}
+#greenSlider {
+    accent-color: green;
+}
+#blueSlider {
+    accent-color: blue;
+}
+#sliders {
+    display: flex;
+    justify-content: center;
 }
 h1 {
     color: white;
-    font-size: 20px;
+    font-size: 25px;
+    text-decoration: underline;
+    margin-right: 20px;
+    margin-top: 10px;
+    text-shadow: 3px 2px 4px;
 }
