--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@
     width: 100%;
     height: 100%
 }
-#audio1 {
+#audioControls {
+    display: flex;
+    justify-content: center;
     z-index: 1;
     width: 25%;
     margin: auto;
@@ -63,11 +65,18 @@
     justify-content: center;
     width: 25%;
 }
+#timeSlider {
+    width: 50%;
+}
+#timeDisplay {
+    font-size: 20px;
+}
 h1 {
     color: white;
     font-size: 25px;
     margin-right: 20px;
     margin-top: 10px;
+    display: inline;
 }
 input {
     z-index: 1;
