--- a/style.css
+++ b/style.css
@@ -26,9 +26,8 @@
     display: flex;
     justify-content: center;
     z-index: 1;
-    width: 25%;
+    width: 37.5%;
     margin: auto;
-    display: block;
 }
 #fileupload {
     display: none;
@@ -40,7 +39,7 @@
     font-weight: bold;
 }
 #songData {
-    width: 25%;
+    width: 37.5%;
     display: flex;
     margin: auto;
     justify-content: center;
@@ -67,9 +66,24 @@
 }
 #timeSlider {
     width: 50%;
+    display: none;
 }
 #timeDisplay {
     font-size: 20px;
+    display: none;
+    margin-left: 5px;
+    margin-top: 2px;
+}
+#pauseButton {
+    height: 30px;
+    width: 30px;
+    display: none;
+}
+#titleText {
+    display: none;
+}
+#changeButton {
+    display: none;
 }
 h1 {
     color: white;
