--- a/style.css
+++ b/style.css
@@ -88,6 +88,23 @@
 #fileUpload {
     display: none;
 }
+#errorScreen {
+    z-index: -100;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background: black;
+    width: 100%;
+    height: 100%;
+}
+#errorMessage {
+    color: white;
+    font-size: 25px;
+    text-decoration: underline;
+    text-align: center;
+    position: relative;
+    top: 45%;
+}
 button {
     background-color: black;
     color: white;
