--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@
     height: 100%;
 }
 #content {
+    position: fixed;
+    z-index: 1;
     display: flex;
-    margin: 10px 0px 0px 0px;
+    margin-top: 10px;
+    width: 100%;
 }
 #canvas1 {
     position: absolute;
@@ -25,12 +28,9 @@
 #audioControls {
     display: flex;
     justify-content: center;
-    z-index: 1;
     width: 35%;
-    margin: auto;
 }
 #fileLabel {
-    z-index: 1;
     color: white;
     font-size: 30px;
     font-weight: bold;
@@ -38,14 +38,12 @@
 #songData {
     width: 35%;
     display: flex;
-    margin: auto;
     justify-content: center;
 }
 #buttons {
     gap: 5px;
-    width: 25%;
+    width: 35%;
     display: flex;
-    margin: auto;
     justify-content: center;
 }
 #redSlider {
@@ -58,57 +56,42 @@
     accent-color: blue;
 }
 #sliders {
-    z-index: 1;
+    flex-direction: column;
     gap: 5px;
     display: flex;
     justify-content: center;
-    width: 35%;
+    width: 10%;
     margin-right: 15px;
 }
 #timeSlider {
     width: 50%;
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 5px;
     accent-color: white;
 }
 #timeDisplay {
     font-size: 20px;
-    margin-left: 5px;
-    margin-top: 2px;
     color: white;
     display: inline;
+    margin-top: 10px;
 }
 #pauseButton {
+    margin-top: 5px;
     height: 30px;
     width: 30px;
 }
 #autoColor {
-    height: 40px;
-    width: 40px;
-    margin: auto 0 auto 0;
+    height: 20px;
+    width: 100%;
+    margin-bottom: 5px;
 }
 #fileUpload {
     display: none;
 }
-#errorScreen {
-    z-index: -100;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    background: black;
-    width: 100%;
-    height: 100%;
-}
-#errorMessage {
-    color: white;
-    font-size: 25px;
-    text-decoration: underline;
-    text-align: center;
-    position: relative;
-    top: 45%;
-}
 button {
     background-color: black;
     color: white;
-    z-index: 1;
     height: 50px;
     width: 60px;
 }
