--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 #audioControls {
     display: flex;
     justify-content: center;
-    width: 35%;
+    width: 50%;
 }
 #fileLabel {
     color: white;
@@ -42,9 +42,10 @@
 }
 #buttons {
     gap: 5px;
-    width: 35%;
+    width: 25%;
     display: flex;
     justify-content: center;
+    margin-right: 20px;
 }
 #redSlider {
     accent-color: red;
@@ -64,11 +65,22 @@
     margin-right: 15px;
 }
 #timeSlider {
-    width: 50%;
+    width: 40%;
     height: 40px;
     margin-left: 5px;
     margin-right: 5px;
     accent-color: white;
+}
+#volumeSlider {
+    accent-color: white;
+    height: 40px;
+    width: 60%;
+}
+#volumeIcon {
+    width: 25px;
+    height: 25px;
+    margin-left: 10%;
+    margin-bottom: 5px;
 }
 #timeDisplay {
     font-size: 20px;
@@ -82,9 +94,10 @@
     width: 30px;
 }
 #autoColor {
-    height: 20px;
-    width: 100%;
+    height: 25px;
+    width: 75%;
     margin-bottom: 5px;
+    margin: auto;
 }
 #fileUpload {
     display: none;
